# complifi

./: .gitignore  ARCHITECTURE.md  Anchor.toml  COMPLETE_SETUP.md  Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package-lock.json  package.json  tsconfig.json
backend/: SETUP_COMPLETE.md  START_HERE.txt  TEST_MONGO.md  package-lock.json  package.json
backend/src/: index.js
dashboard/: FIX_FINAL.md  RUN_NOW.txt  RUN_THESE_COMMANDS.txt  config-overrides.js  package-lock.json  package.json
dashboard/public/: index.html
dashboard/src/: App.css  App.js
dashboard/src/components/: Dashboard.js  README.md
examples/: README.md  demo.js
programs/complifi/: Cargo.toml
programs/complifi/src/: error.rs  instruction.rs  lib.rs  state.rs
sdk/: package.json
sdk/src/: index.js  risk-scores.json
tests/: .eslintrc.json  .gitignore  README.md  complifi.ts
tests/types/: anchor.d.ts
