[package]
name = "complifi"
version = "0.1.0"
description = "On-Chain Compliance Orchestration Layer for Solana"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "complifi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["idl-build", "init-if-needed"] }

